--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="icon" href="../assets/img/logo.jpg">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" href="./assets/img/logo.jpg">
     <title>psicologia</title>
 </head>
 <body>
@@ -85,6 +85,6 @@
 
 </div>
 
-<script src="../javascript/script.js"></script>
+<script src="./javascript/script.js"></script>
 </body>
 </html>
